# eyewire2-functional-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: DATA LICENSE  README.md  ew2_field_setup_positions.csv  experiment-overview.xlsx  experiment-overview_consolidated.csv  experiment-overview_consolidated.xlsx
data/R11/: 0.tif  1.tif  2.tif  3.tif  4.tif
data/morphological-data/: DO NOT USE - Ca imaged cells_Collaborators - overview.csv  Eyewire II Proofread Cells Master List - All Cells (WIP) 2025-09-03.csv  Eyewire II Proofread Cells Master List - All Cells 2025-09-09.csv  Eyewire II Proofreading - Calcium imaged cells - Proofreading 🧠.csv  roi_mapping_2p_to_em.csv
data/preprocessed-data/: README.md  df_eyewire2_field_level.h5  df_eyewire2_field_level.parquet  df_eyewire2_outline.parquet
data/smh/: M1_RR_GCL0_Chirp.smh  M1_RR_GCL0_DS.smh  M1_RR_GCL0_HR.smh  M1_RR_GCL0_MouseCam.smh  M1_RR_GCL1_Chirp.smh  M1_RR_GCL1_DS.smh  M1_RR_GCL1_HR.smh  M1_RR_GCL1_MouseCam.smh  M1_RR_GCL2_Chirp.smh  M1_RR_GCL2_DS.smh  M1_RR_GCL2_HR.smh  M1_RR_GCL2_MouseCam.smh  M1_RR_GCL3_Chirp.smh  M1_RR_GCL3_Chirp2.smh  M1_RR_GCL3_DS.smh  M1_RR_GCL3_HR.smh  M1_RR_GCL3_MouseCam.smh  M1_RR_GCL4_Chirp.smh  M1_RR_GCL4_DS.smh  M1_RR_GCL4_HR.smh  M1_RR_GCL4_MouseCam.smh
data/stimuli/: Chirp.py  DS.py  MouseCam_Left.py  README.md  RandomSequences.txt  mc_to_numpy.py  (+4 more)
notebooks/: EW2_stim_history.ipynb  ExperimentLogFile.ipynb  NaturalStimuli.ipynb  load_data.ipynb  load_recording_log.ipynb  load_stim_movie.ipynb  scratch.py  smhs.csv  stims.csv
src/: stim_movies.py
(+434 files in other folders)
